--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "elevenlabs>=2.27.0",
     "fastapi>=0.127.0",
     "httpx>=0.27.0",
     "mcp>=1.25.0",
